# detect-cliff-realsense

./: README.md
depth_nav_tools/cliff_detector/: CMakeLists.txt
depth_nav_tools/cliff_detector/config/: params.yaml
depth_nav_tools/cliff_detector/include/cliff_detector/: cliff_detector.h  cliff_detector_node.h
depth_nav_tools/cliff_detector/launch/: cliff_detector.launch
depth_nav_tools/cliff_detector/src/: cliff_detector.cpp  cliff_detector_node.cpp
depth_nav_tools/depth_sensor_pose/cfg/: DepthSensorPose.cfg
depth_nav_tools/depth_sensor_pose/config/: params.yaml
depth_nav_tools/depth_sensor_pose/launch/: depth_sensor_pose.launch
depth_nav_tools/depth_sensor_pose/src/: depth_sensor_pose_node.cpp
depth_nav_tools/laserscan_kinect/config/: params.yaml
depth_nav_tools/laserscan_kinect/launch/: laserscan.launch
depth_nav_tools/laserscan_kinect/src/: laserscan_kinect_node.cpp
depth_nav_tools/process_points/: CMakeLists.txt  package.xml
depth_nav_tools/process_points/include/: point_to_laserscan.h
depth_nav_tools/process_points/launch/: process_points.launch
depth_nav_tools/process_points/python/: plot.py
depth_nav_tools/process_points/src/: main.cpp  point_to_laserscan.cpp
